--- a/DINING/diningstore.css
+++ b/DINING/diningstore.css
@@ -1,57 +1,78 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-img{
-  overflow:auto;
-}
-
-.navbar{
-  width: 85%;
-  margin: auto;
-  padding: 35px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* Adjust margin-right to move navbar to the right */
-  margin-right: 100px;
-}
-.logo{
-  width: 120px;
-  cursor: pointer;
-  float: left;
-  padding: 14px 20px;
-  /* Adjust margin-left to move logo to the left */
-  margin-left: 100px;
-}
-.navbar ul li{
-  list-style: none;
-  display: inline-block;
-  margin: 0 20px;
-  position: relative;
-}
-.navbar ul li a{
-  text-decoration: none;
-  color: #5c4033;
-  text-transform: uppercase;
-}
-.navbar ul li::after{
-  content: '';
-  height: 3px;
-  width: 0;
-  background: #ffffff;
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  transition: 0.5s;
-}
-.navbar ul li:hover::after{
-  width: 100%;
+/* Reset and basic styles */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
 }
 
+img {
+    overflow: auto;
+}
+
+/* Navbar styles */
+.navbar {
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 120px;
+    cursor: pointer;
+    float: left;
+    padding: 14px 20px;
+}
+
+/* Navbar list styles */
+.navbar ul {
+    display: flex;
+    list-style: none;
+}
+
+.navbar ul li {
+    margin: 0 20px;
+    position: relative;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: #5c4033;
+    text-transform: uppercase;
+}
+
+.navbar ul li::after {
+    content: '';
+    height: 3px;
+    width: 0;
+    background: #ffffff;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.5s;
+}
+
+.navbar ul li:hover::after {
+    width: 100%;
+}
+
+/* Responsive styles */
 @media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar ul {
+        flex-direction: column;
+        width: 100%;
+    }
+    .navbar ul li {
+        margin: 10px 0;
+    }
+    .logo {
+        margin-left: 0; /* Reset margin-left */
+    }
+}
